# bom-generator

./: CMakeLists.txt  main.cpp
